Update package version for @firestitch/filter to 18.2.115. Adjust styles in filter component to ensure proper alignment of icon buttons, enhancing visual consistency.

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -93,9 +93,9 @@
   gap: 5px;
 
   ::ng-deep .mdc-icon-button {
-    display: flex;
-
     --mdc-icon-button-state-layer-size: 40px;
+    display: flex;
+    align-items: center;    
     padding: 8px;
 
     ::ng-deep svg {
